better ContentError handling